AC_INIT([erlang-mysql-driver], [0.9.7], [kerem@medratech.com])

AC_PREREQ([2.64])
AC_COPYRIGHT([Copyright (C) 2010 H. Kerem Cevahir])
AM_INIT_AUTOMAKE

AC_ERLANG_NEED_ERLC
AC_PREFIX_PROGRAM(erl)
AC_ERLANG_SUBST_ROOT_DIR
AC_ERLANG_SUBST_ERTS_VER
AC_ERLANG_SUBST_LIB_DIR
AC_ERLANG_CHECK_LIB([kernel])
AC_ERLANG_CHECK_LIB([stdlib])
AC_ERLANG_CHECK_LIB([edoc])
AC_ERLANG_CHECK_LIB([eunit])
AC_ERLANG_SUBST_INSTALL_LIB_SUBDIR([mysql_driver], [0.9.7])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
